Details
-
Bug
-
Status: Closed
-
Major
-
Resolution: Fixed
-
proton-c-0.18.0
-
None
-
commit e631bf6b11960d9687d42dfdde1ff4c65804981c (upstream/master)
Author: Andrew Stitcher <astitcher@apache.org>
Date: Thu Aug 31 17:31:17 2017 -0400
PROTON-1567: Implement failover urls
- Example "reliable" client sending and receiving messages
- Also add jitter to retry backoff (with C++11)
Description
When using the sample client from https://github.com/ssorj/skylla/blob/master/cpp/connect.cpp to connect to current ActiveMQ Artemis server 2.4.0-SNAPSHOT, I am getting the following error
$ PN_TRACE_FRM=1 KRB5_TRACE=/dev/stdout LD_LIBRARY_PATH=/var/local/lib64/ ./connect 127.0.0.1 [0x7b4c00000550]: -> AMQP [0x7b4c00000550]:0 -> @open(16) [container-id="", hostname="127.0.0.1", channel-max=32767] [0x7b4c00000550]:0 -> @close(24) [error=@error(29) [condition=:"amqp:connection:framing-error", description="AMQP header mismatch: AMQP SASL layer ['AMQP\x03\x01\x00\x00']"]] [0x7b4c00000550]: <- EOS [0x7b4c00000550]: -> EOS terminate called after throwing an instance of 'proton::error' what(): amqp:connection:framing-error: AMQP header mismatch: AMQP SASL layer ['AMQP\x03\x01\x00\x00'] Aborted
I am able to connect to the same server with Qpid JMS client without problems.
Attachments
Issue Links
- is superceded by
-
PROTON-1682 SASL auth with GSSAPI fails: hostname is not set
- Closed