PROTON-1570: [C++ binding] fix connection_option processing - Previously SASL options (and others) were only processed if they   were specified as default options on a container